# meta-hackathon

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  requirements.txt
